# EDGE-COVID19

## build 202103
* Lowered default threshold for detecting indels in amplicon-based ONT data to 0.6 (from 0.8)
* Add swift primer trim option
* Add Pangolin lineage assignment for consensus genome
* Add INDEL frameshfit warning and link to indel report
* SNP analysis on consenesus changelog with ambiguous code
* Add lineage result link to outbreak.info lineage report

## build 20210216
* Add funding acknowledgement in about page
* Incorrect uses of align_trim on Illumina samples while trimming the ARTIC primers was fixed by making the trimming strand specific. We recommend rerunning your samples if it was generated using Illumina following the ARTIC protocol.
* Avoid genbank2gff3 write tmp file to read-only system
* Change the working directory to outdir for CharliesCloud, the read-only container
* Disabled filtering alignments based on BAQs for samples sequenced using Illumina also. Now, all the sequences This was causing coverage reduction in location around indels.

## build 20201223
* Fix bug: batch metadata page project link
* Fix bug: mapping with long reads flag --long for minimap2 and nanopore data
* add MD flag for minimap2 on run Reads to Contigs
* Rename SNPs -> SNVs.
* Consensus with deletion and IUPAC

## build 20201130
* Add --comp option for command line consensus_fasta
* Update remote UShER URL and check server status
* Fix GISAID/NCBI upload bugs
* Multiple projects report in tables. (“Reports” on menu)
* Fix bug: auto_run block by failure rerun
* Update url for ena api
* Add Batch submission of SRA projects.
* Fix minimap2 se reads mapping options
* Add --remove_softclip flag for bam_to_fastq script, and if align_trim is on, it will align_trim use NC_0045512, extract reads with soft-clipped removed, and map back to NC_0045512 and GISAID genome

## build 20201007
* Avoid duplicate metadata field between batch submit and single project submit
* Update GISAID/NCBI submit and add NCBI/GISAID genome batch submit