@@ -31,7 +31,7 @@
 	<script src="javascript/jquery.mobile-1.4.3.min.js"></script>
 	<script src="javascript/jquery.dataTables.min.js"></script>
 	<script src="javascript/dataTables.checkboxes.min.js"></script>
-	<script src="javascript/edge.js?v=20210216"></script>
+	<script src="javascript/edge.js?v=20210407"></script>
 	<script src="javascript/spectrum.js"></script>
 	<script src="javascript/jqueryFileTree.js"></script>
 	<script src="javascript/raphael-min.js" ></script>
@@ -352,6 +352,9 @@
 
 	<div role='main' id='edge-gisaid-metadata-project-page' class='ui-content edge-content edge-output edge-main-page'>
 	</div><!-- /gisaid-metadata-project-page' -->
+
+	<div role='main' id='edge-sra-metadata-project-page' class='ui-content edge-content edge-output edge-main-page'>
+ 	</div><!-- /gisaid-sra-project-page' -->
 
 <form id="edge-run-pipeline-form" autocomplete='off'>
 	<div role="main" id="edge-content-pipeline" class="ui-content edge-content edge-main-page">
@@ -2262,7 +2265,7 @@
 		<center style="color:#777;font-size:0.9em">Questions? Please contact us at  <a href="mailto:edge-covid19@lanl.gov">edge-covid19@lanl.gov</a>.</center>
 	<div data-role="footer" data-position="fixed" data-tap-toggle="false" class="edge-footer ui-footer ui-bar-inherit ui-footer-fixed slideup" role="contentinfo">
 		<p>EDGE-UI v2.4.0
-			<span style="font-size: 0.5em; display: block; clear: both; margin-top: 3px;">build 20210216</span>
+			<span style="font-size: 0.5em; display: block; clear: both; margin-top: 3px;">build 20210407</span>
 		</p>	
 		<a id="scroll-up-btn" href="#" class="ui-btn ui-icon-carat-u ui-btn-icon-notext ui-corner-all">No text</a>
 		<div class="edge-footer-logo-left">
