@@ -1,12 +1,14 @@
 # EDGE-COVID19
 
-## build 202103
+## build 20210407
 * Lowered default threshold for detecting indels in amplicon-based ONT data to 0.6 (from 0.8)
 * Add swift primer trim option
 * Add Pangolin lineage assignment for consensus genome
 * Add INDEL frameshfit warning and link to indel report
 * SNP analysis on consenesus changelog with ambiguous code
 * Add lineage result link to outbreak.info lineage report
+* Add Single project NCBI SRA submission at the project action widget
+* Add Bioproject ID and release-date selection for NCBI genome submission
 
 ## build 20210216
 * Add funding acknowledgement in about page
